--- a/wp-content/themes/LumberJack/style.css
+++ b/wp-content/themes/LumberJack/style.css
@@ -141,31 +141,6 @@ LOADER END */
 /*	Sidebar main
 *********************************/
 
-.sidebar-main{
-    padding: 0 !important;
-    margin: 0;
-    overflow: hidden;
-    background: #0f1012;
-    position: fixed !important;
-    left: 0;
-    top: 0;
-    min-height: 100% !important;
-    height: auto !important;
-    height: 100%;
-    z-index: 9999;
-}
-
-.sidebar-main .logo{
-	width:100%;
-	height:215px;
-	margin:0;
-	padding: 56px 0;
-	background:url(img/side_logo_bg.png) no-repeat;
-	background-position: 50% 50%;
-	background-size:cover !important;
-	box-sizing:border-box;
-}
-
 .sidebar-main .logo a{
 	width:100%;
 	padding:0 15px;
@@ -179,8 +154,8 @@ LOADER END */
 }
 
 #menu-menu-menu li, #menu-menu-menu-en li{
-	width:100%;
-	display: block;
+	width: auto;
+	display: inline-block;
 	text-align: center;
 }
 
@@ -3509,4 +3484,25 @@ body .woocommerce input.button.alt:hover{
 
 .wrapProdItem {
     margin-left: 20px;
+}
+
+
+
+// Redesign
+.header {
+	display: flex;
+    justify-content: space-between;
+}
+.header .logo {
+	flex-shrink: 0;
+	height:40px;
+	width: 200px;
+	margin:0;
+	background:url(img/side_logo_bg.png) no-repeat;
+	background-position: 50% 50%;
+	background-size:cover !important;
+	box-sizing:border-box;
+}
+.mainmenu {
+	flex: 1;
 }
