--- a/wp-content/themes/LumberJack/style.css
+++ b/wp-content/themes/LumberJack/style.css
@@ -9,6 +9,12 @@
 	font-style: normal;
 }
 @font-face {
+	font-family: 'MuseoSansCyrl700';
+	src: url('fonts/MuseoSansCyrl_2.otf');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
 	font-family: 'BaronNeueBold';
 	src: url('fonts/BaronNeueBold.eot');
 	src: local('☺'), url('fonts/BaronNeueBold.woff') format('woff'), url('fonts/BaronNeueBold.ttf') format('truetype'), url('fonts/BaronNeueBold.svg') format('svg');
@@ -167,7 +173,17 @@ LOADER END */
 .content{
 	padding: 0 !important;
 }
-
+.fullwidth {
+	margin: 0 -99999px;
+	width: auto;
+}
+.fullwidth > div {
+	padding: 0 99999px;
+	width: 100%;
+}
+.img {
+	box-shadow: 0px 4px 40px 3px rgba(163,155,163,1);
+}
 .img-top{
 	width:100%;
 	height: 100vh;
@@ -183,7 +199,7 @@ LOADER END */
 }
 
 .img-desc{
-	text-align: center;
+	text-align: left;
 	transition:1.2s;
 }
 
@@ -196,14 +212,27 @@ LOADER END */
 	opacity: 1 !important;
 }
 
+.top-side .img-desc .title-small {
+	color: #eda357;
+	font-size: 16px;
+	font-family: 'MuseoSansCyrl500', Arial, sans-serif;
+	display: block;
+	padding-bottom: 20px;
+	padding-top: 28px;
+}
+.top-side .img-desc .link-more {
+	color: #000;
+	font-size: 16px;
+	font-family: 'MuseoSansCyrl500', Arial, sans-serif;
+}
 .top-side .img-desc h1, .top-side .img-desc h2{
 	color:#000000;
 	display: inline-block;
-	font-size:2.14em;
-	font-family: 'BaronNeue', Arial, sans-serif;
+	font-size:40px;
+	font-family: 'MuseoSansCyrl700', Arial, sans-serif;
 	padding:0;
 	margin:0;
-	margin:0 0 58px 0;
+	margin:0 0 48px 0;
 }
 
 .top-side .img-desc p, .top-side .img-desc ul{
@@ -214,11 +243,7 @@ LOADER END */
 }
 
 .our-service{
-	width:100%;
-	margin:0;
-	padding:0;
-	background:url(img/serv_bg.jpg) no-repeat;
-	background-size:cover !important;
+
 }
 
 .prop-srv{
@@ -3507,4 +3532,10 @@ body .woocommerce input.button.alt:hover{
 }
 #social-sidebar li:hover a{
 	opacity: 1;
+}
+
+/* Homepage */
+#services {
+	background:url(img/services.jpg) no-repeat;
+	background-position: center;
 }
